macviews: fix KeepBubbleAnchored() in RTL

When in RTL mode, bubbles with a *right* arrow (which in LTR mode are on the
right side of the window) appear on the left, so their MinX should become
fixed. Similarly, bubbles with a *left* arrow appear on the right, so their
MinX should be variable.

Bug: 827123
Change-Id: I557cdfaa84a94d5ee431c210730b156c60d20105
Reviewed-on: https://chromium-review.googlesource.com/986276
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546874}
Former-commit-id: e8beda3f6ab28ec4d473e5bfd33ceb9a6f6cb86e